--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -36,7 +36,8 @@
       "source": [
         "import pandas as pd\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn import preprocessing"
+        "from sklearn import preprocessing\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "execution_count": 0,
       "outputs": []
@@ -62,7 +63,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Following function will process the data before it is fed into the model for training or predicting. Sex will be encoded with one-hot encoding scheme and other features such as age and fare will be normalized as they are ordinal."
+        "The following function will process the data before it is fed into the model for training or predicting. Sex will be encoded with one-hot encoding scheme as sex is not ordinal. There is no need to normalize other features. When selecting a feature to split, information gain will not be influenced by the magnitute of values. When preprocessing data, I am replacing all missing data with 0. It is not the ideal approach, however, because it affects the split of feature with missing data. Will re-approach this issue later. "
       ]
     },
     {
@@ -75,17 +76,16 @@
       "source": [
         "def processData(data):\n",
         "  copy = data.drop(['Sex'], axis=1)\n",
-        "  copy['Cabin'].fillna(0, inplace=True)\n",
+        "  copy.fillna(0, inplace=True) #Replacing all missing data with 0\n",
         "  copy['Cabin'][copy['Cabin'] != 0] = 1\n",
         "  xEncoder = preprocessing.OneHotEncoder(handle_unknown='ignore')\n",
         "  x1 = data[['Sex']]\n",
         "  xEncoder.fit(x1)\n",
         "  x1 = xEncoder.transform(x1).toarray()\n",
-        "  print(x1)\n",
         "  df = pd.DataFrame(data=x1, columns=['Male', 'Female'])\n",
-        "  print(df.head())\n",
-        "  output = copy.append(df)\n",
-        "  print(output.head())\n",
+        "  output = pd.concat([copy, df], axis=1)\n",
+        "  #preprocessing.normalize(output, axis=1, copy=False) There is no need to normalize\n",
+        "  #print(output.head())\n",
         "  return output"
       ],
       "execution_count": 0,
@@ -99,13 +99,16 @@
         "colab": {}
       },
       "source": [
-        "trainDF = pd.read_csv('/content/drive/My Drive/Dataset/Titanic/train.csv', header=0)\n",
-        "#print(trainDF.head())\n",
-        "trainX = trainDF.drop(['Survived', 'Name', 'Ticket', 'Embarked'], axis=1)\n",
-        "trainY = trainDF[['Survived']]\n",
-        "print(trainX.head())\n",
-        "#print(trainY.head())\n",
-        "trainX = processData(trainX)"
+        "df = pd.read_csv('/content/drive/My Drive/Dataset/Titanic/train.csv', header=0)\n",
+        "train, test = train_test_split(df, test_size=0.2)\n",
+        "train.reset_index(inplace=True)\n",
+        "test.reset_index(inplace=True)\n",
+        "trainX = train.drop(['Survived', 'PassengerId', 'Name', 'Ticket', 'Embarked'], axis=1)\n",
+        "testX = test.drop(['Survived', 'PassengerId', 'Name', 'Ticket', 'Embarked'], axis=1)\n",
+        "trainY = train[['Survived']]\n",
+        "testY = test[['Survived']]\n",
+        "trainX = processData(trainX)\n",
+        "testX = processData(testX)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -115,14 +118,66 @@
       "metadata": {
         "id": "7YWImaWr5G5H",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "f791222d-adce-45ed-cacd-b18eb672037e"
       },
       "source": [
         "DT = DecisionTreeClassifier(criterion='entropy')\n",
         "DT.fit(trainX, trainY)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DecisionTreeClassifier(class_weight=None, criterion='entropy', max_depth=None,\n",
+              "                       max_features=None, max_leaf_nodes=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, presort=False,\n",
+              "                       random_state=None, splitter='best')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LdELKEC70pKE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3f9e63f3-c3e8-417b-9057-c9640362b9b4"
+      },
+      "source": [
+        "DT.score(testX, testY)"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8212290502793296"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
     }
   ]
 }
