--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -37,7 +37,8 @@
         "import pandas as pd\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn import preprocessing\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import RandomForestClassifier"
       ],
       "execution_count": 0,
       "outputs": []
@@ -118,17 +119,17 @@
       "metadata": {
         "id": "7YWImaWr5G5H",
         "colab_type": "code",
+        "outputId": "f791222d-adce-45ed-cacd-b18eb672037e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        },
-        "outputId": "f791222d-adce-45ed-cacd-b18eb672037e"
+        }
       },
       "source": [
         "DT = DecisionTreeClassifier(criterion='entropy')\n",
         "DT.fit(trainX, trainY)"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,16 +155,16 @@
       "metadata": {
         "id": "LdELKEC70pKE",
         "colab_type": "code",
+        "outputId": "3f9e63f3-c3e8-417b-9057-c9640362b9b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "3f9e63f3-c3e8-417b-9057-c9640362b9b4"
+        }
       },
       "source": [
         "DT.score(testX, testY)"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,6 +177,83 @@
             "tags": []
           },
           "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yYsgOPobIPW6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "outputId": "55bb8beb-6714-4dc5-f395-ae1629c1c1b1"
+      },
+      "source": [
+        "RF = RandomForestClassifier(criterion='entropy')\n",
+        "RF.fit(trainX, trainY)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+            "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+            "  \n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+              "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+              "                       n_jobs=None, oob_score=False, random_state=None,\n",
+              "                       verbose=0, warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uux_ye9NItyg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2b7f0f86-7c6b-4576-c81d-5d0afe29a1e2"
+      },
+      "source": [
+        "RF.score(testX, testY)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8379888268156425"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     }
