Added grid search to tune hyperparameters for single decision tree

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -38,7 +38,9 @@
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn import preprocessing\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.ensemble import RandomForestClassifier"
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn import tree\n",
+        "from sklearn.model_selection import GridSearchCV"
       ],
       "execution_count": 0,
       "outputs": []
@@ -97,7 +99,11 @@
       "metadata": {
         "id": "BCBpNV0T0Sjd",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "21b9ec80-e57b-4ef8-8531-2ca6b3a195dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        }
       },
       "source": [
         "df = pd.read_csv('/content/drive/My Drive/Dataset/Titanic/train.csv', header=0)\n",
@@ -111,15 +117,32 @@
         "trainX = processData(trainX)\n",
         "testX = processData(testX)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  after removing the cwd from sys.path.\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  after removing the cwd from sys.path.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7YWImaWr5G5H",
         "colab_type": "code",
-        "outputId": "f791222d-adce-45ed-cacd-b18eb672037e",
+        "outputId": "5fe3c39f-b0b1-496f-c0cc-39f80c504e10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -129,7 +152,7 @@
         "DT = DecisionTreeClassifier(criterion='entropy')\n",
         "DT.fit(trainX, trainY)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +169,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 7
         }
       ]
     },
@@ -155,7 +178,7 @@
       "metadata": {
         "id": "LdELKEC70pKE",
         "colab_type": "code",
-        "outputId": "3f9e63f3-c3e8-417b-9057-c9640362b9b4",
+        "outputId": "68a4c2ed-0d3b-4a5c-b29c-e18e7e60a54d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -164,19 +187,19 @@
       "source": [
         "DT.score(testX, testY)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8212290502793296"
+              "0.7821229050279329"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 8
         }
       ]
     },
@@ -185,17 +208,17 @@
       "metadata": {
         "id": "yYsgOPobIPW6",
         "colab_type": "code",
+        "outputId": "045e57c0-a436-4e72-b44e-88a45a702f3f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
-        },
-        "outputId": "55bb8beb-6714-4dc5-f395-ae1629c1c1b1"
+        }
       },
       "source": [
         "RF = RandomForestClassifier(criterion='entropy')\n",
         "RF.fit(trainX, trainY)"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +246,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -232,28 +255,78 @@
       "metadata": {
         "id": "uux_ye9NItyg",
         "colab_type": "code",
+        "outputId": "bd3355df-dbdb-424f-e6a4-743fce7d950e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "2b7f0f86-7c6b-4576-c81d-5d0afe29a1e2"
+        }
       },
       "source": [
         "RF.score(testX, testY)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8379888268156425"
+              "0.8044692737430168"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tQJ4XR3KRTK0",
+        "colab_type": "code",
+        "outputId": "d9b5861b-da31-4774-81b2-1a6ac3a10d32",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
+      },
+      "source": [
+        "#tree.plot_tree(DT)\n",
+        "hyperPara = {'splitter':['best', 'random'], 'min_samples_leaf':[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 'min_samples_split':[2, 3, 4, 5, 6, 7, 8, 9, 10]}\n",
+        "gridSearch = GridSearchCV(DT, hyperPara)\n",
+        "gridSearch.fit(trainX, trainY)\n",
+        "print(gridSearch.best_params_)\n",
+        "gridSearch.best_estimator_.score(testX, testY)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+            "  warnings.warn(CV_WARNING, FutureWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "{'min_samples_leaf': 4, 'min_samples_split': 7, 'splitter': 'random'}\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8212290502793296"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
         }
       ]
     }
