--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -10,7 +10,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -40,7 +41,8 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn import tree\n",
-        "from sklearn.model_selection import GridSearchCV"
+        "from sklearn.model_selection import GridSearchCV\n",
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -99,11 +101,7 @@
       "metadata": {
         "id": "BCBpNV0T0Sjd",
         "colab_type": "code",
-        "outputId": "21b9ec80-e57b-4ef8-8531-2ca6b3a195dc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 191
-        }
+        "colab": {}
       },
       "source": [
         "df = pd.read_csv('/content/drive/My Drive/Dataset/Titanic/train.csv', header=0)\n",
@@ -117,42 +115,25 @@
         "trainX = processData(trainX)\n",
         "testX = processData(testX)"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  after removing the cwd from sys.path.\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  after removing the cwd from sys.path.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7YWImaWr5G5H",
         "colab_type": "code",
-        "outputId": "5fe3c39f-b0b1-496f-c0cc-39f80c504e10",
+        "outputId": "e4691760-cad3-44e3-b139-c08a61f15ffc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
         }
       },
       "source": [
-        "DT = DecisionTreeClassifier(criterion='entropy')\n",
+        "DT = DecisionTreeClassifier(criterion='entropy', random_state=42)\n",
         "DT.fit(trainX, trainY)"
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -163,13 +144,13 @@
               "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
               "                       min_samples_leaf=1, min_samples_split=2,\n",
               "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-              "                       random_state=None, splitter='best')"
+              "                       random_state=42, splitter='best')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 16
         }
       ]
     },
@@ -178,7 +159,7 @@
       "metadata": {
         "id": "LdELKEC70pKE",
         "colab_type": "code",
-        "outputId": "68a4c2ed-0d3b-4a5c-b29c-e18e7e60a54d",
+        "outputId": "050e304f-1c95-4e72-8151-2aeab0581226",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -187,19 +168,19 @@
       "source": [
         "DT.score(testX, testY)"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7821229050279329"
+              "0.7206703910614525"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 17
         }
       ]
     },
@@ -208,7 +189,7 @@
       "metadata": {
         "id": "yYsgOPobIPW6",
         "colab_type": "code",
-        "outputId": "045e57c0-a436-4e72-b44e-88a45a702f3f",
+        "outputId": "41176ffe-2b0f-4d9a-9d88-335db4ce4132",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
@@ -218,7 +199,7 @@
         "RF = RandomForestClassifier(criterion='entropy')\n",
         "RF.fit(trainX, trainY)"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +227,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 18
         }
       ]
     },
@@ -255,7 +236,7 @@
       "metadata": {
         "id": "uux_ye9NItyg",
         "colab_type": "code",
-        "outputId": "bd3355df-dbdb-424f-e6a4-743fce7d950e",
+        "outputId": "fba31d1b-c29d-4bed-ccf0-99c5dc79a4ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -264,20 +245,30 @@
       "source": [
         "RF.score(testX, testY)"
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8044692737430168"
+              "0.776536312849162"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 19
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fLmSEQE-NkQc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Train a single decision tree model with some hyperparameter tuning using grid search"
       ]
     },
     {
@@ -285,7 +276,7 @@
       "metadata": {
         "id": "tQJ4XR3KRTK0",
         "colab_type": "code",
-        "outputId": "d9b5861b-da31-4774-81b2-1a6ac3a10d32",
+        "outputId": "932bd904-feac-466b-f8d8-acee188ac388",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -293,13 +284,14 @@
       },
       "source": [
         "#tree.plot_tree(DT)\n",
-        "hyperPara = {'splitter':['best', 'random'], 'min_samples_leaf':[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 'min_samples_split':[2, 3, 4, 5, 6, 7, 8, 9, 10]}\n",
-        "gridSearch = GridSearchCV(DT, hyperPara)\n",
+        "hyperPara = {'splitter':['best', 'random'], 'criterion':['gini', 'entropy'], 'min_samples_leaf':range(1, 21), 'min_samples_split':range(2, 41), 'min_impurity_decrease':np.linspace(0, 1, 11)}\n",
+        "#gridSearch = GridSearchCV(DT, hyperPara)\n",
+        "gridSearch = GridSearchCV(DecisionTreeClassifier(random_state=42), hyperPara)\n",
         "gridSearch.fit(trainX, trainY)\n",
         "print(gridSearch.best_params_)\n",
         "gridSearch.best_estimator_.score(testX, testY)"
       ],
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +304,7 @@
         {
           "output_type": "stream",
           "text": [
-            "{'min_samples_leaf': 4, 'min_samples_split': 7, 'splitter': 'random'}\n"
+            "{'criterion': 'entropy', 'min_impurity_decrease': 0.0, 'min_samples_leaf': 3, 'min_samples_split': 10, 'splitter': 'random'}\n"
           ],
           "name": "stdout"
         },
@@ -320,13 +312,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8212290502793296"
+              "0.7988826815642458"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 20
         }
       ]
     }
