Tuned random forest with grid search

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -101,7 +101,11 @@
       "metadata": {
         "id": "BCBpNV0T0Sjd",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        },
+        "outputId": "7d6b461a-2208-41bd-e553-adaa68f3fb29"
       },
       "source": [
         "df = pd.read_csv('/content/drive/My Drive/Dataset/Titanic/train.csv', header=0)\n",
@@ -115,15 +119,32 @@
         "trainX = processData(trainX)\n",
         "testX = processData(testX)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  after removing the cwd from sys.path.\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  after removing the cwd from sys.path.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7YWImaWr5G5H",
         "colab_type": "code",
-        "outputId": "e4691760-cad3-44e3-b139-c08a61f15ffc",
+        "outputId": "91203e18-dca9-4a6f-8662-9f6f50ab42e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -133,7 +154,7 @@
         "DT = DecisionTreeClassifier(criterion='entropy', random_state=42)\n",
         "DT.fit(trainX, trainY)"
       ],
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +171,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 6
         }
       ]
     },
@@ -159,7 +180,7 @@
       "metadata": {
         "id": "LdELKEC70pKE",
         "colab_type": "code",
-        "outputId": "050e304f-1c95-4e72-8151-2aeab0581226",
+        "outputId": "e3574ae2-1950-4af7-82a7-849a94d35cd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -168,19 +189,19 @@
       "source": [
         "DT.score(testX, testY)"
       ],
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7206703910614525"
+              "0.6871508379888268"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 7
         }
       ]
     },
@@ -189,25 +210,23 @@
       "metadata": {
         "id": "yYsgOPobIPW6",
         "colab_type": "code",
-        "outputId": "41176ffe-2b0f-4d9a-9d88-335db4ce4132",
+        "outputId": "2679570b-543f-40cf-f09a-96f35e0c910e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 228
+          "height": 173
         }
       },
       "source": [
         "RF = RandomForestClassifier(criterion='entropy')\n",
-        "RF.fit(trainX, trainY)"
+        "RF.fit(trainX, trainY.values.ravel())"
       ],
-      "execution_count": 18,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.6/dist-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-            "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-            "  \n"
+            "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
           ],
           "name": "stderr"
         },
@@ -227,7 +246,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 8
         }
       ]
     },
@@ -236,7 +255,7 @@
       "metadata": {
         "id": "uux_ye9NItyg",
         "colab_type": "code",
-        "outputId": "fba31d1b-c29d-4bed-ccf0-99c5dc79a4ce",
+        "outputId": "af8e2615-c756-4ce8-a866-0c181cc2f293",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -245,19 +264,19 @@
       "source": [
         "RF.score(testX, testY)"
       ],
-      "execution_count": 19,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.776536312849162"
+              "0.7932960893854749"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 9
         }
       ]
     },
@@ -276,7 +295,7 @@
       "metadata": {
         "id": "tQJ4XR3KRTK0",
         "colab_type": "code",
-        "outputId": "932bd904-feac-466b-f8d8-acee188ac388",
+        "outputId": "86fd5848-781a-432c-faf0-7f15c00508bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -291,7 +310,7 @@
         "print(gridSearch.best_params_)\n",
         "gridSearch.best_estimator_.score(testX, testY)"
       ],
-      "execution_count": 20,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +323,7 @@
         {
           "output_type": "stream",
           "text": [
-            "{'criterion': 'entropy', 'min_impurity_decrease': 0.0, 'min_samples_leaf': 3, 'min_samples_split': 10, 'splitter': 'random'}\n"
+            "{'criterion': 'entropy', 'min_impurity_decrease': 0.0, 'min_samples_leaf': 4, 'min_samples_split': 23, 'splitter': 'random'}\n"
           ],
           "name": "stdout"
         },
@@ -312,13 +331,67 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7988826815642458"
+              "0.7821229050279329"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0HQGTPV8cEv_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#rfHyperPara = {'n_estimators':range(10, 110, 10), 'criterion':['gini', 'entropy'], 'min_samples_leaf':range(1, 21), 'min_samples_split':range(2, 41), 'min_impurity_decrease':np.linspace(0, 1, 11)}\n",
+        "rfHyperPara = {'min_samples_leaf':range(1, 11), 'min_samples_split':range(2, 21), 'min_impurity_decrease':np.linspace(0, 1, 11)}\n",
+        "gscvRF = GridSearchCV(RandomForestClassifier(random_state=42), rfHyperPara)\n",
+        "gscvRF.fit(trainX, trainY.values.ravel())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wuo0RSnbKPdH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "079d2025-9678-46c4-aa03-c180d2809f3d"
+      },
+      "source": [
+        "print(gscvRF.best_params_)\n",
+        "gscvRF.score(testX, testY)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 5}\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8100558659217877"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     }
