--- a/TitanicNN.ipynb
+++ b/TitanicNN.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "TitanicNN.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -97,38 +98,42 @@
       "metadata": {
         "id": "1dfLUI5xWsdg",
         "colab_type": "code",
+        "outputId": "afdfd852-7afc-488a-bfd5-de2e8f36dfd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
-        },
-        "outputId": "c9f51fbe-a30c-45f0-ae24-770a38954f0d"
+          "height": 87
+        }
       },
       "source": [
-        "singleNN = MLPClassifier(solver='sgd',learning_rate='adaptive', random_state=42)\n",
+        "singleNN = MLPClassifier(max_iter=500, solver='sgd',learning_rate='adaptive', random_state=42, learning_rate_init=1.5, batch_size=600, hidden_layer_sizes=5000, alpha=0.00005)\n",
         "singleNN.fit(trainX, trainY.values.ravel())\n",
-        "singleNN.score(testX, testY)"
+        "print('k')\n",
+        "print(singleNN.score(testX, testY))\n",
+        "print('k')\n",
+        "singleNN.score(trainX, trainY)"
       ],
-      "execution_count": 33,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/multilayer_perceptron.py:566: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
-            "  % self.max_iter, ConvergenceWarning)\n"
+            "k\n",
+            "0.8044692737430168\n",
+            "k\n"
           ],
-          "name": "stderr"
+          "name": "stdout"
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7653631284916201"
+              "0.8441011235955056"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 31
         }
       ]
     },
@@ -137,81 +142,37 @@
       "metadata": {
         "id": "I41nxJvsX4IA",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "faa0553d-4316-428e-a0fc-24ea6566e131"
+        "colab": {}
       },
       "source": [
-        "hyperPara = {'solver':['adam', 'sgd'],'hidden_layer_sizes':[100, 150, 200], 'learning_rate':['adaptive', 'constant'], 'learning_rate_init':np.linspace(0.01, 0.1, 6)}\n",
-        "gsNN = GridSearchCV(MLPClassifier(solver='sgd', max_iter=1000, random_state=42), hyperPara)\n",
+        "hyperPara = {'solver':['adam', 'sgd'], 'learning_rate':['adaptive', 'constant'], 'learning_rate_init':np.linspace(0.8, 2, 7), 'shuffle':[True, False]}\n",
+        "gsNN = GridSearchCV(MLPClassifier(solver='sgd', max_iter=500, random_state=42, hidden_layer_sizes=5000, batch_size=600), hyperPara)\n",
         "gsNN.fit(trainX, trainY.values.ravel())"
       ],
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
-            "  warnings.warn(CV_WARNING, FutureWarning)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "GridSearchCV(cv='warn', error_score='raise-deprecating',\n",
-              "             estimator=MLPClassifier(activation='relu', alpha=0.0001,\n",
-              "                                     batch_size='auto', beta_1=0.9,\n",
-              "                                     beta_2=0.999, early_stopping=False,\n",
-              "                                     epsilon=1e-08, hidden_layer_sizes=(100,),\n",
-              "                                     learning_rate='constant',\n",
-              "                                     learning_rate_init=0.001, max_iter=1000,\n",
-              "                                     momentum=0.9, n_iter_no_change=10,\n",
-              "                                     nesterovs_momentum=True, power_t=0.5,\n",
-              "                                     rand...\n",
-              "                                     solver='sgd', tol=0.0001,\n",
-              "                                     validation_fraction=0.1, verbose=False,\n",
-              "                                     warm_start=False),\n",
-              "             iid='warn', n_jobs=None,\n",
-              "             param_grid={'hidden_layer_sizes': [100, 150, 200],\n",
-              "                         'learning_rate': ['adaptive', 'constant'],\n",
-              "                         'learning_rate_init': array([0.01 , 0.028, 0.046, 0.064, 0.082, 0.1  ]),\n",
-              "                         'solver': ['adam', 'sgd']},\n",
-              "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
-              "             scoring=None, verbose=0)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 43
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-_CAaslmaShB",
         "colab_type": "code",
+        "outputId": "b89597b8-c43f-4b4d-da3e-6a451033b9ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "cea8d2f2-0f9c-441f-8676-8f6dbb64058f"
+        }
       },
       "source": [
         "print(gsNN.best_params_)\n",
         "gsNN.score(testX, testY)"
       ],
-      "execution_count": 44,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'hidden_layer_sizes': 100, 'learning_rate': 'adaptive', 'learning_rate_init': 0.064, 'solver': 'sgd'}\n"
+            "{'learning_rate': 'constant', 'learning_rate_init': 1.7999999999999998, 'shuffle': True, 'solver': 'sgd'}\n"
           ],
           "name": "stdout"
         },
@@ -219,13 +180,66 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8212290502793296"
+              "0.7821229050279329"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0PPv85JyYlOU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "hyperPara2 = {'learning_rate_init':np.linspace(0.8, 2, 7), 'shuffle':[True, False], 'momentum':[0.9, 0.6, 0.3], 'alpha':[0.00005, 0.0001]}\n",
+        "sgdNN = GridSearchCV(MLPClassifier(solver='sgd', learning_rate='adaptive', max_iter=500, random_state=42, hidden_layer_sizes=1000, batch_size=400), hyperPara2)\n",
+        "sgdNN.fit(trainX, trainY.values.ravel())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PhDVQfIjZ-yu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "cec1ee6e-f732-414b-b2ef-972a71fe5719"
+      },
+      "source": [
+        "print(sgdNN.best_params_)\n",
+        "sgdNN.score(testX, testY)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'alpha': 5e-05, 'learning_rate_init': 1.0, 'momentum': 0.6, 'shuffle': True}\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7932960893854749"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
         }
       ]
     }
